fix(main): prevent linewrapping in the header on smaller screen sizes

--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 .app-header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
+  @media screen and (width <= 768px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
   background-color: var(--bg-color-secondary);
   padding: 10px 10px;
@@ -12,7 +15,7 @@
     text-shadow: 2px 2px 2px #00000053;
 
     @media screen and (width <= 768px) {
-      grid-column: 1;
+      grid-column: 1 / 3;
     }
 
     @media (width <= 640px) {
